# resting-rigid-bodies

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_inverse_design
BB_result_scripts/: James_plot_distrs.py  batch_run.py  experiment_stats.ipynb  probs_figure.py  read_KL_divs.ipynb  run_experiments.ipynb
BB_result_scripts/CSVs/: Hendecahedron_2d6_V1.csv  Hendecahedron_2d6_V2.csv  armadilo_d3.csv  binom2.csv  binom3.csv  binom4.csv  bunny_d6.csv  dragon_d3.csv  hendehahedron_2d6.csv  kitten_d3.csv  simulation_data.csv
BB_result_scripts/experiment_plots/: exp_result_output.html
apps/: main_convex_dice.cpp  main_drop_prob.cpp
cmake/: Eigen3.cmake  FindGUROBI.cmake  autodiff.cmake  bullet3.cmake  ipc-toolkit.cmake  json.cmake  osqp-cpp.cmake  rigid-ipc.cmake  stan.cmake  tinyad.cmake
cmake/modules/: FindGUROBI.cmake  FindMOSEK.cmake  tbb.cmake
examples/2D6_circus/: final_normal_probs.json
examples/2D6_hendecahedron_V1/: final_normal_probs.json
examples/2D6_hendecahedron_V2/: final_normal_probs.json
examples/Binom2/: final_normal_probs.json  params.json
examples/Binom3/: final_normal_probs.json  initial_normal_probs.json
examples/Binom4/: final_normal_probs.json  params.json
examples/D3_armadillo/: final_normal_probs.json
examples/D3_dragon/: G_opt_out.txt  final_normal_probs.json
examples/D3_kitten/: final_normal_probs.json
include/: CP_tools.h  ambient_conversions.h  arc_algebra.h  boundary_tools.h  boundary_tools.impl.h  bullet_sim.h  coloring.h  convex_hull.h  deformation.h  file_IO.h  forward.h  forward3D.h  geometry_utils.h  inv_design.h  markov_model.h  mesh_factory.h  optimization.h  remesh_tools.h  utils.h  visual_utils.h
include/inverse_design/: deformation.h  dice_energy.h  dice_energy.impl.h  optimization.h  prob_assignment.h  remesh_tools.h
include/inverse_design/concave_dice/: CP_tools.h
legacy/: ConvHull.nb  coloring.h  implot.cpp  inv_design.cpp  main_IPC_script.cpp  main_bullet.cpp  main_roll_figs.cpp  main_visuals.cpp  markov_model.cpp  plot.py
meshes/: d120.stl
meshes/50 mm polyhedral dice - 6005144/: LICENSE.txt  README.txt
meshes/50 mm polyhedral dice - 6005144/files/: d10.scad  d10.stl  d100.scad  d100.stl  d100h_10.scad  d100h_10.stl  d100h_20.scad  d100h_20.stl  d100l_10.scad  d100l_10.stl  d100l_20.scad  d100l_20.stl  d10_20.scad  d10_20.stl  d12.scad  d12.stl  d120.scad  d16.scad  d16.stl  d20.scad  d20.stl  d24.scad  d24.stl  d30.scad  d30.stl  d30_cut.scad  d30_cut.stl  d3_6.scad  d3_6.stl  d4.scad  d4.stl  d48.scad  d48.stl  d4b.scad  d4b.stl  d6.scad  d6.stl  d60.scad  d60.stl  d6_fudge.scad  (+4 more)
meshes/Extensive dice collection (d4, d6, d8, d10, d12, d14, d16, d18, d20, d24, d28, d30, d48, d60, d120) - 4145859/: LICENSE.txt  README.txt
meshes/Extensive dice collection (d4, d6, d8, d10, d12, d14, d16, d18, d20, d24, d28, d30, d48, d60, d120) - 4145859/files/: d12-RhombicDodecahedron.stl  d14-HeptagonalTrapezohedron.scad  d16-OctogonalDipyramid.scad  d18-NonagonalTrapezohedron.scad  d20-Icosahedron.scad  d24-DeltoidalIcositetrahedron-futhark.scad  d24-DeltoidalIcositetrahedron-futhark.stl  d28u-BiaugmentedHeptagonalAntiprism.scad  d30-RhombicTriacontahedron-font.scad  d30-RhombicTriacontahedron-font.stl  d4-Tetrahedron.scad  d6-Cube.scad  f16u-GyrateOctogonalDipyramid.scad  f24u-BiaugmentedHexagonalAntiprism.scad  f60-PentagonalHexecontahedron-R.scad  f8-OctahedronTwist.scad
meshes/hulls/3D_print/final_stls/: 4Prism_binomial_2x.stl  5Prism_binomial_2x.stl  6Prism_binomial_2x.stl  armadilo_d3.stl  bunny_d6.stl  circus_2d6.stl  dodecahedron_binom.stl  hendecahedron_2d6.stl  hendecahedron_2d6_V6.stl  hendecahedron_2d6_v2.stl  kitten_d3.stl  prism3_binom.stl  prism4_binom.stl  prism5_binom.stl  xyz_dragon_d3.stl
meshes/hulls/Non-convex deformation/: G_kitten_d3_v0.txt
meshes/hulls/best_versions/3Prism_binomial2_defaultParams_logs/: 3Prism_binomial2_defaultParams_ICOS.json  3Prism_binomial2_defaultParams_IPC.txt
meshes/hulls/best_versions/4prism_binomial_defaultParams_logs/: 4prism_binomial_defaultParams_ICOS.json  4prism_binomial_defaultParams_IPC.txt
meshes/hulls/best_versions/circus_CoPlanar_with_reg_logs/: circus_CoPlanar_with_reg_bullet.txt
meshes/hulls/best_versions/cuub_binomial_antipodal_symm_logs/: cuub_binomial_antipodal_symm_ICOS.json  cuub_binomial_antipodal_symm_bullet.txt
meshes/hulls/best_versions/hendecahedron_double_dice_sum_w_coplanar_reg_DE_0.001_logs/: hendecahedron_double_dice_sum_w_coplanar_reg_DE_0.001_IPC.txt  hendecahedron_double_dice_sum_w_coplanar_reg_DE_0.001_bullet.txt
opt_release/2D6_circus/: initial_normal_probs.json  params.json
opt_release/2D6_hendecahedron_V1/: normal_probs_hendeca_v1.json  params.json
opt_release/2D6_hendecahedron_V2/: initial_normal_probs.json  params.json
opt_release/Binom2/: normal_probs_B2.json
opt_release/Binom3/: params.json
opt_release/Binom4/: normal_probs_B4.json
opt_release/D3_armadillo/: G_opt_out.txt  initial_normal_probs.json  params.json
opt_release/D3_dragon/: initial_normal_probs.json  params.json
opt_release/D3_kitten/: initial_normal_probs.json
physical_experiments/results/: experiment_results.txt
slides/: ~$IntroTalkTemplate 24.pptx
src/: CP_tools.cpp  MS_complex.cpp  ambient_conversions.cpp  arc_algebra.cpp  boundary_tools.cpp  bullet_sim.cpp  coloring.cpp  convex_hull.cpp  deformation.cpp  file_IO.cpp  forward.cpp  forward3D.cpp  geometry_utils.cpp  inv_design.cpp  main.cpp  main3D.cpp  main_G_opt.cpp  main_IPC_script.cpp  main_ad_debug.cpp  main_bullet.cpp  main_convex_dice.cpp  main_convex_fill.cpp  main_drop_prob.cpp  main_hull_fill.cpp  main_inverse.cpp  main_pstest.cpp  main_roll_figs.cpp  main_visuals.cpp  markov_model.cpp  mesh_factory.cpp  optimization.cpp  remesh_tools.cpp  utils.cpp  visual_utils.cpp
src/inverse_design/: CP_tools.cpp  deformation.cpp  dice_energy.cpp  main_convex_dice.cpp  main_hull_fill.cpp  optimization.cpp  prob_assignment.cpp  remesh_tools.cpp
src/inverse_design/concave_dice/: CP_tools.cpp  deformation.cpp  optimization.cpp  remesh_tools.cpp
(+3081 files in other folders)
